# purrOS

./: 32bit_gdt.asm  Makefile  README.md  bochsout.txt  bochsrc.txt  boot_sect_print.asm  boot_sect_print_hex.asm  floppy.img  run_bochs.sh
boot/: bootsect.asm
bootloader/: 32bit-main.asm  boot_sect_disk.asm  boot_sect_simple.S  boot_sect_simple.asm
drivers/: ports.h
kernel/: bootsect.asm  kernel.c  screen.h
purr_os_r/: Cargo.toml
purr_os_r/.cargo/: config.toml
purr_os_r/src/: main.rs  serial.rs  vga_buffer.rs
src/: Makefile  common.c  common.h  descriptor_tables.c  descriptor_tables.h  kernel  libc.h  main.c  memory.c  monitor.c  monitor.h  spwn  string.c  string.h
