[package]
name = "purr_os_r"
version = "0.1.0"
edition = "2018"


[dependencies]
bootloader = "0.9.8" #we are using the bootloader crate
volatile = "0.2.6" #to stop erronous optimization of omitting writes
spin = "0.5.2" #spin lock to lock the process till thread is available:  https://en.wikipedia.org/wiki/Spinlock


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
